fix page horizontal scroll

--- a/css/magic-v1.css
+++ b/css/magic-v1.css
@@ -16426,6 +16426,9 @@ body[data-siteBuilder]{
   display: flex;
   flex-wrap: wrap;
   min-height: 100vh;
+  width: 100%;
+  overflow-x: hidden;
+  position: relative;
 }
 
 [data-pwa] body[data-siteBuilder]{
